--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -295,16 +295,16 @@
                 name: $("#character-input").val(),
                 photo: $("#picture-input").val(),
                 scores: [
-                parseInt($("#question-1").val()),
-                parseInt($("#question-2").val()),
-                parseInt($("#question-3").val()),
-                parseInt($("#question-4").val()),
-                parseInt($("#question-5").val()),
-                parseInt($("#question-6").val()),
-                parseInt($("#question-7").val()),
-                parseInt($("#question-8").val()),
-                parseInt($("#question-9").val()),
-                parseInt($("#question-10").val())
+                $("#question-1").val(),
+                $("#question-2").val(),
+                $("#question-3").val(),
+                $("#question-4").val(),
+                $("#question-5").val(),
+                $("#question-6").val(),
+                $("#question-7").val(),
+                $("#question-8").val(),
+                $("#question-9").val(),
+                $("#question-10").val()
                 ]
             }
         }
