--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -135,7 +135,8 @@
         width: 75%;
       }
 
-      #charModalText {
+      #charModalText,
+      #alertModalText {
         font-size: 2em;
         text-align: center;
       }
@@ -143,7 +144,7 @@
   </head>
 
   <body>
-    <!-- Modal -->
+    <!-- Character Modal -->
     <div id="charModal" class="modal fade" role="dialog">
       <div class="modal-dialog">
         <!-- Modal content-->
@@ -168,6 +169,34 @@
             <button
               type="button"
               id="charModalClose"
+              class="btn btn-default"
+              data-dismiss="modal"
+            >
+              Close
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Character Modal -->
+    <div id="alertModal" class="modal fade" role="dialog">
+      <div class="modal-dialog">
+        <!-- Modal content-->
+        <div class="modal-content">
+          <div class="modal-header">
+            <h4 class="modal-title">Alert:</h4>
+            <button type="button" class="close" data-dismiss="modal">
+              &times;
+            </button>
+          </div>
+          <div id="alertModalText" class="modal-body">
+            <p></p>
+          </div>
+
+          <div class="modal-footer">
+            <button
+              type="button"
+              id="alertModalClose"
               class="btn btn-default"
               data-dismiss="modal"
             >
@@ -376,8 +405,20 @@
       $("#survey-submit-button").on("click", function(){
           $.ajaxSetup({ traditional: true });
           if ($("#character-input").val() === "" || $("#picture-input").val() === "") {
-            /* $("#survey-submit-button")attr("data-toggle", "none"); */
-              alert("Please enter your name and a photo URL!")
+                      $("#alertModal").modal();
+                      $("#alertModalText").text("Please enter your name and an image URL!");
+          } else if ($("#question-1").val() === "0" ||
+                    $("#question-2").val() === "0" ||
+                    $("#question-3").val() === "0" ||
+                    $("#question-4").val() === "0" ||
+                    $("#question-5").val() === "0" ||
+                    $("#question-6").val() === "0" ||
+                    $("#question-7").val() === "0" ||
+                    $("#question-8").val() === "0" ||
+                    $("#question-9").val() === "0" ||
+                    $("#question-10").val() === "0") {
+                      $("#alertModal").modal();
+                      $("#alertModalText").text("Please answer all questions!");
           } else {
               var newChar = {
                   name: $("#character-input").val(),
@@ -395,7 +436,6 @@
                   $("#question-10").val()
                   ]
               }
-          }
           console.log(newChar);
           $.post("/api/friends", newChar).done(function(result) {
             $("#charModal").modal();
@@ -404,6 +444,7 @@
             $("#charImg").attr("src", result.photo);
             $("#survey-body").hide();
         });
+          }
       });
 
       $("#charModalClose").on("click", function() {
@@ -421,6 +462,10 @@
             $("#question-10").val(0)
             $("#survey-body").show();
       });
+
+      $("#alertModalClose").on("click", function() {
+        $("#survey-body").show();
+      })
     </script>
   </body>
 </html>
